first file of landing page exercises

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="intro"> <!--start first section-->
                 <div class="header"> 
                     <div class="logo">
-                        <img src="gearok.jpg" alt="gear">
+                        <img src="images/gearok.jpg" alt="gear">
                         <p>MTB</p>
                     </div>
                     <div class="links-intro">
@@ -29,12 +29,12 @@
                 </div>
                 <div class="box-presentation">
                     <div class="presentation">
-                        <h1>I want to ride my bike</h1>
-                        <p>This is the page for your bike, share your favourite strava route, pics of your landscape and coffes pubs and bike parts tou dont need anymore  </p>
-                        <button>Sign in</button>
+                        <h1>I want to ride my Bicicle</h1>
+                        <p>This is a web site for your bike, share your favourite strava route, pics of your landscape and coffes pubs and bike parts tou dont need anymore  </p>
+                        <button>Sign in</buttonbike>
                     </div>
                     <div class="first-imag">
-                        <img src="cyclist.jpg" alt="cyclist">
+                        <img src="images/cyclist.jpg" alt="cyclist">
                     </div>
                 </div> 
             </div> <!--end first section-->
@@ -42,15 +42,16 @@
             <div class="images"> <!--start second section-->
                 <div class="images-tittle"><p>Routes done</p></div>
                 <div class="box-images">
-                    <div class="mtb"><img src="mtb1.jpg" alt="mtb1"><p>something nice about the pic 1 and its track</p></div>
-                    <div class="mtb"><img src="mtb2.jpg" alt="mtb2"><p>something nice about the pic 2 and its track</p></div>
-                    <div class="mtb"><img src="mtb3.jpg" alt="mtb3"><p>something nice about the pic 3 and its track</p></div>
-                    <div class="mtb"><img src="mtb4.jpg" alt="mtb4"><p>something nice about the pic 4 and its track</p></div>
+                    <div class="mtb"><img src="images/mtb1.jpg" alt="mtb1"><p>something nice about the pic 1 and its track</p></div>
+                    <div class="mtb"><img src="images/mtb2.jpg" alt="mtb2"><p>something nice about the pic 2 and its track</p></div>
+                    <div class="mtb"><img src="images/mtb3.jpg" alt="mtb3"><p>something nice about the pic 3 and its track</p></div>
+                    <div class="mtb"><img src="images/mtb4.jpg" alt="mtb4"><p>something nice about the pic 4 and its track</p></div>
                 </div>
             </div>
 
-            <div class="customers">
-
+            <div class="inspiration">
+                <div class="quote"><p></p></div>
+                <div class="sign"><p></p></div>
             </div>
             <div class="contact">
 
