apdate landing page html and css file

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div class="box-presentation">
                     <div class="presentation">
                         <h1>I want to ride my Bicicle</h1>
-                        <p>This is a web site for your bike, share your favourite strava route, pics of your landscape and coffes pubs and bike parts tou dont need anymore  </p>
-                        <button>Sign in</buttonbike>
+                        <p>This is a web site for your bike, share your favourite strava route, pics of your landscape and coffes pubs,also find bike parts that need.  </p>
+                        <button>Sign in</button>
                     </div>
                     <div class="first-imag">
                         <img src="images/cyclist.jpg" alt="cyclist">
@@ -40,7 +40,7 @@
             </div> <!--end first section-->
 
             <div class="images"> <!--start second section-->
-                <div class="images-tittle"><p>Routes done</p></div>
+                <div class="images-tittle"><p>Routes made</p></div>
                 <div class="box-images">
                     <div class="mtb"><img src="images/mtb1.jpg" alt="mtb1"><p>something nice about the pic 1 and its track</p></div>
                     <div class="mtb"><img src="images/mtb2.jpg" alt="mtb2"><p>something nice about the pic 2 and its track</p></div>
@@ -50,14 +50,21 @@
             </div>
 
             <div class="inspiration">
-                <div class="quote"><p></p></div>
-                <div class="sign"><p></p></div>
+                <div class="quote"><p>Bicycle, bicycle, bicycle<br> I want to ride my bicycle, bicycle, bicycle<br> I want to ride my bicycle<br> I want to ride my bike<br> I want to ride my bicycle<br> I want to ride it where I like</p></div>
+                <!--<p>Bicycle, bicycle, bicycle; I want to ride my bicycle, bicycle, bicycle; I want to ride my bicycle; I want to ride my bike; I want to ride my bicycle; I want to ride it where I like</p>-->
+                <div class="sign"><p>-Queen</p></div>
             </div>
             <div class="contact">
-
+                <div class="blue-box">
+                    <div class="info-blue-box">
+                        <h1>Call to action! It's time</h1>
+                        <p>Sign up for enjoy our mtb comunity clicking that button right oveer there</p>
+                    </div>
+                    <button> Sign up</button>
+                </div>
             </div>
             <div class="footer">
-
+                <p>Copyright The Odin Project</p>
             </div>
         </div>
     </body>
