--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Landing Page</title>
 		<link rel="stylesheet" href="style.css">	
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 	</head>
 
 	<body>
-
         <div class="content">
-
             <div class="intro"> <!--start first section-->
                 <div class="header"> 
                     <div class="logo">
                         <img src="images/gearok.jpg" alt="gear">
-                        <p>MTB</p>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          MENU
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">About it</a></li>
+                          <li><a class="dropdown-item" href="#">Queen</a></li>
+                          <li><a class="dropdown-item" href="#">Gallery</a></li>
+                          <li><a class="dropdown-item" href="#">contact</a></li>
+                        </ul>
                     </div>
                     <div class="links-intro">
                         <ul>
-                            <li>Strava routes</li>
-                            <li>Gallery</li>
-                            <li>Bikes and parts</li>
+                            <li><a class="dropdown-item" href="#">About it</a></li>
+                            <li><a class="dropdown-item" href="#">Queen</a></li>
+                            <li><a class="dropdown-item" href="#">Gallery</a></li>
+                            <li><a class="dropdown-item" href="#">contact</a></li>  
                         </ul> 
                     </div>
                 </div>
@@ -67,6 +78,7 @@
                 <p>Copyright The Odin Project</p>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 
 
