Doing the page resposive and adding  some bootstrap functions

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           <li><a class="dropdown-item" href="#">About it</a></li>
                           <li><a class="dropdown-item" href="#">Queen</a></li>
                           <li><a class="dropdown-item" href="#">Gallery</a></li>
-                          <li><a class="dropdown-item" href="#">contact</a></li>
+                          <li><a class="dropdown-item" href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="links-intro">
@@ -34,13 +34,13 @@
                             <li><a class="dropdown-item" href="#">About it</a></li>
                             <li><a class="dropdown-item" href="#">Queen</a></li>
                             <li><a class="dropdown-item" href="#">Gallery</a></li>
-                            <li><a class="dropdown-item" href="#">contact</a></li>  
+                            <li><a class="dropdown-item" href="#">Contact</a></li>  
                         </ul> 
                     </div>
                 </div>
                 <div class="box-presentation">
                     <div class="presentation">
-                        <h1>I want to ride my Bicicle</h1>
+                        <h1>I want to ride my Bicycle!</h1>
                         <p>This is a web site for your bike, share your favourite strava route, pics of your landscape and coffes pubs,also find bike parts that need.  </p>
                         <button>Sign in</button>
                     </div>
@@ -51,7 +51,7 @@
             </div> <!--end first section-->
 
             <div class="images"> <!--start second section-->
-                <div class="images-tittle"><p>Routes made</p></div>
+                <div class="images-tittle"><p>Routes</p></div>
                 <div class="box-images">
                     <div class="mtb"><img src="images/mtb1.jpg" alt="mtb1"><p>something nice about the pic 1 and its track</p></div>
                     <div class="mtb"><img src="images/mtb2.jpg" alt="mtb2"><p>something nice about the pic 2 and its track</p></div>
