Doing the page resposive and adding  some bootstrap functions

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="box-presentation">
                     <div class="presentation">
                         <h1>I want to ride my Bicycle!</h1>
-                        <p>This is a web site for your bike, share your favourite strava route, pics of your landscape and coffes pubs,also find bike parts that need.  </p>
+                        <p>This is a web site for your bike, share your favourite routes, pics of your landscape and coffes pubs, also find bike parts that need.  </p>
                         <button>Sign in</button>
                     </div>
                     <div class="first-imag">
