Doing the page resposive and adding  some bootstrap functions, hovers and neon effects

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="blue-box">
                     <div class="info-blue-box">
                         <h1>It's time!</h1>
-                        <p>Sign up for enjoy our mtb comunity just clicking that button right over there!</p>
+                        <p>Sign up to enjoy our mtb comunity news just clicking the button!</p>
                     </div>
                     <button> Sign up</button>
                 </div>
