Added sign-up link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 <html lang="en">
 	<head>
@@ -42,15 +42,17 @@
                     <div class="presentation">
                         <h1>I want to ride my Bicycle!</h1>
                         <p>This is a web site for your bike, share your favourite routes, pics of your landscape and coffes pubs, also find bike parts that need.  </p>
-                        <button>Sign in</button>
+                        <a href="https://eduarmarin.github.io/sign-up/" target="_blank" rel="noopener noreferrer" >
+                            <button>Sign up</button>
+                        </a>
                     </div>
                     <div class="first-imag">
                         <img src="images/cyclist.jpg" alt="cyclist">
                     </div>
                 </div> 
-            </div> <!--end first section-->
+            </div> 
 
-            <div id="routes" class="images"> <!--start second section-->
+            <div id="routes" class="images"> 
                 <div class="images-tittle"><p>Routes</p></div>
                 <div class="box-images">
                     <div class="mtb"><img src="images/mtb1.jpg" alt="mtb1">
@@ -83,7 +85,9 @@
                         <h1>It's time!</h1>
                         <p>Sign up to enjoy our mtb comunity news just clicking the button!</p>
                     </div>
-                    <button> Sign up</button>
+                    <a href="https://eduarmarin.github.io/sign-up/" target="_blank" rel="noopener noreferrer" >
+                        <button>Sign up</button>
+                    </a>
                 </div>
             </div>
 
